2009-04-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Move table of contents after the title page.

	* doc/guile-pg.twerp: Move @contents; delete @summarycontents.

2008-08-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Remove support for unused SCM_OUTPORTP.

	* build-aux/guile-pg.m4 (AC_GUILE_PG_FCOMPAT):
	Delete AC_LINK_IFELSE check for `SCM_OUTPORTP'
	and the related `HAVE_SCM_OUTPORTP' AC_DEFINE.

2008-08-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Assume system provides tmpfile(3).

	* configure.in (tmpfile): Delete this AC_CHECK_FUNCS.

2008-08-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Consolidate Guile API specification.

	* configure.in (AH_BOTTOM): Delete.

2008-08-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Add infrastructure to more easily tweak GCC warnings for "make all".

	* configure.in: When using GCC, don't modify `CFLAGS';
	instead, set var `AGGRESSIVE_WARNINGS'.  Enable many warnings.
	(AGGRESSIVE_WARNINGS): New AC_SUBST.

2008-08-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Decruft: Don't check for `crypt' in libcrypt.

	* build-aux/guile-pg.m4 (PQ_FLAGS): No longer check for func
	`crypt' in libcrypt.  No longer modfiy `PQ_LDFLAGS' accordingly.

2008-08-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Tighten up "show-platform" a bit.

	* Makefile.am (dist-hook): Also substitute "RECIP".

2008-08-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Drop support for PostgreSQL 7.3.x and earlier.

	* build-aux/guile-pg.m4 (PQ_FLAGS): No longer check
	for `PQsetdbLogin' in libpq.  Instead, check for
	`PQprotocolVersion'.  Update error message.
	* configure.in: No longer check for `PQconnectdb' in libpq.
	No longer check for `InvalidOID' decl in libpq-fe.h.
	(INVALIDOID_HEADER): Delete this AC_DEFINE.
	(PQfmod, PQbinaryTuples, PQbackendPID)
	(PQresultErrorMessage, PQpass, PQputnbytes)
	(PQoidValue, PQsetnonblocking, PQisnonblocking)
	(PQprotocolVersion, PQfreemem): No longer AC_CHECK_FUNCS these.

2008-08-07  Thien-Thi Nguyen  <ttn@gnuvola.org>
