@@ -22,13 +22,13 @@ dnl  Boston, MA  02110-1301  USA
 
 AC_INIT([Guile-PG],[0.37],[ttn@gnuvola.org])
 AC_CONFIG_AUX_DIR([build-aux])
-AM_INIT_AUTOMAKE([1.10.1 -Wall])
+AM_INIT_AUTOMAKE([1.11 -Wall])
 
 AM_CONFIG_HEADER([src/config.h])
 
 AM_MAINTAINER_MODE
 
-LT_PREREQ([2.2.2])
+LT_PREREQ([2.2.6])
 LT_INIT([dlopen disable-static]) dnl module only
 
 AC_PROG_CC
